--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "radium": "^0.17.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-key-handler": "^0.2.0",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
