--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "node-uuid": "^1.4.7",
     "radium": "^0.17.1",
     "react": "^15.0.1",
+    "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^15.0.1",
+    "react-gsap-enhancer": "^0.2.2",
     "react-key-handler": "^0.2.0",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
